// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse suggestions > dictionaryWithSuggestions 1`] = `
[
  "Begin",
  "~begin",
  "Begin+",
  "~begin+",
  "End",
  "~end",
  "+End",
  "~+end",
  "+Middle+",
  "~+middle+",
  "Café",
  "~café",
  "~cafe",
  "!forbid",
  "Begin",
  "~begin",
  "Begin+",
  "~begin+",
  "End",
  "~end",
  "+End",
  "~+end",
  "+Middle+",
  "~+middle+",
  "Café",
  "~café",
  "~cafe",
  "!forbid",
  "Geschäft",
  "~geschäft",
  "~geschaft",
  "resumé",
  "~resume",
  "Error",
  "~error",
  "Error+",
  "~error+",
  "+error",
  "+error+",
  "Code",
  "~code",
  "Code+",
  "~code+",
  "+code",
  "+code+",
  "msg",
  "+msg",
  "!err",
  "!Errorerror",
  "!Codemsg",
  "Café",
  "~café",
  "~cafe",
  "!codecode",
  ":word",
  ":word:0:suggestion1",
  ":word:1:suggestion2",
  "colour",
  "colour:0:color",
  "favourite",
  "favourite:0:favorite",
  "!forbidden",
  "!forbidden:0:suggested1",
  "!forbidden:1:suggested2",
  "!forbiddenA",
  "!forbiddenA:0:forbidden A",
  "!forbiddenA:1:suggestion A",
  "!forbiddenB",
  "!forbiddenB:0:use B",
  "!forbiddenB:1:suggestion BB",
  "!forbiddenB",
  "!forbiddenB:0:use A",
]
`;

exports[`parse suggestions > dictionaryWithSuggestions0 1`] = `
[
  ":word",
  ":word:0:suggestion1",
  ":word:1:suggestion2",
  "colour",
  "colour:0:color",
  "favourite",
  "favourite:0:favorite",
  "!forbidden",
  "!forbidden:0:suggested1",
  "!forbidden:1:suggested2",
  "!forbiddenA",
  "!forbiddenA:0:forbidden A",
  "!forbiddenA:1:suggestion A",
  "!forbiddenB",
  "!forbiddenB:0:use B",
  "!forbiddenB:1:suggestion BB",
  "!forbiddenB",
  "!forbiddenB:0:use A",
]
`;
